Fix ranks display on mobile

--- a/src/app/progress/CrucibleRank.m.scss
+++ b/src/app/progress/CrucibleRank.m.scss
@@ -11,6 +11,7 @@
   align-items: flex-start;
   @include phone-portrait {
     align-items: center;
+    flex-direction: column;
   }
 }
 
